--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,9 +1,9 @@
 name: CI
 on:
   push:
-    branches: [ main ]
+    branches: [main]
   pull_request:
-    branches: [ main ]
+    branches: [main]
   workflow_dispatch:
 jobs:
   build:
@@ -14,3 +14,19 @@ jobs:
         run: python3 -m pip install -e . && python3 -m pip install -r dev-requirements.txt
       - name: Run tests
         run: python3 -m pytest tests
+  publish:
+    name: "Publish in PyPi"
+    runs-on: ubuntu-latest
+    needs:
+      - test
+    steps:
+      - uses: actions/checkout@v3
+      - name: Publish
+        env:
+          USERNAME: ${{ secrets.USERNAME }}
+          PASSWORD: ${{ secrets.PASSWORD }}
+        run: |
+          pip3 install wheel twine
+          python3 setup.py sdist bdist_wheel
+          python3 -m twine check dist/*
+          python3 -m twine upload --skip-existing dist/* --verbose -u ${USERNAME} -p ${PASSWORD}
