--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,7 +6,7 @@ on:
     branches: [main]
   workflow_dispatch:
 jobs:
-  build:
+  tests:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
@@ -18,7 +18,7 @@ jobs:
     name: "Publish in PyPi"
     runs-on: ubuntu-latest
     needs:
-      - test
+      - tests
     steps:
       - uses: actions/checkout@v3
       - name: Publish
