--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,7 +11,7 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - name: Install dependencies
-        run: python3 -m pip install -e . && python3 -m pip install -r dev-requirements.txt && python3 -m pip install pyopenssl==22.0.0 --upgrade
+        run: python3 -m pip install --upgrade && python3 -m pip install -e . && python3 -m pip install -r dev-requirements.txt
       - name: Run tests
         run: python3 -m pytest src/tests
   publish:
